# reflection-app

./: .gitignore  Cargo.toml  README.md  build-application.sh  docker-compose.yml  run-application.sh
app/: .env.production  .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  firebase.ts  local-docker-deploy.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  typings.d.ts  typings.ts
app/.metals/: metals.lock.db  metals.mv.db
app/atoms/: atoms.ts
app/components/: AddAudioFile.tsx  AudioControls.tsx  AudioDescription.tsx  AudioEntry.tsx  AudioMediaPlayer.tsx  AudioPlayer.tsx  AudioStreamer.tsx  AudioStreaming.tsx  AudioSynopsys.tsx  AudioTranscripts.tsx  AudioVisualizer.tsx  BackButton.tsx  BorderLinearProgress.tsx  ChatControls.tsx  CommonMoodContainer.tsx  Contents.tsx  DailyMoodSummary.tsx  GeneratePrompt.tsx  GreetingUser.tsx  HomeButton.tsx  JournalThumbnail.tsx  LineChart.tsx  LiveNotification.tsx  ModalView.tsx  MoodActivityChart.tsx  MoodAreaChart.tsx  MoodCompositionChart.tsx  MoodFilter.tsx  MoodSummary.tsx  MoodSummaryContents.tsx  MoodTrackerIndex.tsx  NavigationButtons.tsx  PhoneView.tsx  PlayerModal.tsx  PostSummaryControls.tsx  QRCode.tsx  RecentEntries.tsx  RecordComponent.tsx  SampleWebsocket.tsx  SettingsButtons.tsx  (+8 more)
app/components/button/: GenericButton.tsx  SmallButton.tsx  SocialsButton.tsx
app/components/controls/: AudioControls.tsx  ChatControls.tsx
app/components/headers/: Headers.tsx
app/components/layout/: Layout.tsx
app/hooks/: AudioRecorder.tsx  useAudioData.ts  useAudioPlayer.ts  useAudioPlayer.tsx  useAudioRecording.tsx  useAuth.tsx  useLocalStorage.ts  useLocalStorage.tsx  useMounted.tsx  useUploadProgress.tsx
app/layout/: Layout.tsx
app/models/: loginInput.ts  user.ts
app/pages/: 404.js  _app.tsx  chat.tsx  collections.tsx  home_summary.tsx  index.tsx  listen.tsx  mood_summary.tsx  password_change.tsx  password_reset.tsx  password_success.tsx  play.tsx  playlist.tsx  post_analysis.tsx  record.tsx  see_all.tsx  signin.tsx  weekly_calendar.tsx
app/styles/: globals.css
app/unused_pages/: verify.tsx
app/util/: changeInPercentage.ts  convertWav.ts  deleteEntry.ts  formatTime.ts  fullTimeFormat.ts  getAll.ts  getAllByDate.ts  getCommonMood.ts  getEntry.ts  getMoodSummary.ts  getRecentAudioEntries.ts  getRelatedTags.ts  getServerProgress.ts  getTextSummary.ts  getWeekStartandEndDate.ts  getWeeklySummary.ts  openAIStream.ts  recentEntryTimeStamp.ts  updateEntry.ts  uploadAudioRecording.ts  uploadChatRecording.ts  uploadWav.ts
nginx/: Dockerfile  default.conf
whisper/: .example.env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.chef  Dockerfile.multi  Dockerfile.prod  Dockerfile.test  compose.yaml  docker-compose.yml  kill-deps.sh  local-docker-deploy.sh  localhost-run.sh
whisper/src/: broadcast.rs  controller.rs  error.rs  lib.rs  main.rs  server.rs
whisper/src/controllers/: audio_analysis.rs  audio_data.rs  daily_data.rs  eleven_labs.rs  mod.rs  openapi_key.rs  sse.rs  weekly_controller.rs
whisper/src/controllers/ws/: mod.rs
whisper/src/ml/: audio_transcription.rs  chat.rs  daily_pattern.rs  daily_summary.rs  mod.rs  prompt.rs  recommendation.rs  sockets.rs  text_classification.rs  tts.rs  weekly_pattern.rs  whisper.rs
whisper/src/ml/response_types/: audioanalysis.rs  audiodata.rs  dailydata.rs  mod.rs  weeklydata.rs
whisper/src/persistence/: audio_analysis.rs  audio_db.rs  daily_db.rs  db.rs  mod.rs  weekly_db.rs
(+77 files in other folders)
