[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web = { version = "4.3.1", features = ["openssl"] }
anyhow = "1.0.69"
async-trait = "0.1.65"
bytes = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
futures-util = "0.3.26"
hound = "3.5.0"
hyper =  { version = "0.14.24", features= ["full"]}
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.17"
openssl = "0.10.48"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
tempfile = "3.4.0"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features= ["full"]}
whisper-rs = "0.4.0"
## Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.2"
wav = "1.0.0"
num_cpus = "1.15.0"
tokio-stream = "0.1.12"
parking_lot = "0.12.1"
actix-web-actors = "4.2.0"
actix = "0.13.0"
# actix-web-actors = "4.2.0"
# actix = "0.13.0"
# actix-rt = "2.8.0"

[profile.release]
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Optimization for size ( most aggressive )
opt-level = 'z'
# Link time optimization using using whole-program analysis
lto = true
debug = true
