[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web = { version = "4.3.1" }
anyhow = "1.0.69"
async-trait = "0.1.65"
bytes = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
futures-util = "0.3.26"
hound = "3.5.0"
hyper =  { version = "0.14.24", features= ["full"]}
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.17"
openssl = { version = "0.10", features = ["vendored"] }

serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
serde_with = {version = "3.3.0"}
tempfile = "3.4.0"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features= ["full"]}
# whisper-rs = "0.5.0"
## Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.2"
wav = "1.0.0"
num_cpus = "1.15.0"
tokio-stream = "0.1.12"
parking_lot = "0.12.1"
actix-web-actors = "4.2.0"
actix = "0.13.0"
actix-http = "3.3.1"
mongodb = "2.4.0"
uuid = "1.3.0"
chrono = { version = "0.4", features = ["serde", "std", "unstable-locales"] }
once_cell = "1.17.1"
bson = { version = "2.6.1", features = ["chrono-0_4", "serde_with"] }
rayon = "1.7.0"
async-stream = "0.3.5"
crossbeam = "0.8.2"
num = "0.4.0"
actix-web-lab = "0.19.1"
# actix-web-actors = "4.2.0"
# actix = "0.13.0"
# actix-rt = "2.8.0"


[dev-dependencies]
serde_json = "1.0.107"
jsonpath_lib = "0.3.0"
base64 = "0.21.4"
testcontainers = "0.15.0"

[profile.release]
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Optimization for size ( most aggressive )
opt-level = 3
# Link time optimization using using whole-program analysis
lto = true
debug = true
